; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/rsi/extr_rsi_91x_usb.c_rsi_usb_master_reg_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/rsi/extr_rsi_91x_usb.c_rsi_usb_master_reg_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsi_hw = type { i64 }
%struct.usb_device = type { i32 }
%struct.rsi_91x_usbdev = type { %struct.usb_device* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rsi_hw*, i64, i64, i32)* @rsi_usb_master_reg_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rsi_usb_master_reg_write(%struct.rsi_hw* %0, i64 %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.rsi_hw*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.usb_device*, align 8
  store %struct.rsi_hw* %0, %struct.rsi_hw** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load %struct.rsi_hw*, %struct.rsi_hw** %5, align 8
  %11 = getelementptr inbounds %struct.rsi_hw, %struct.rsi_hw* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to %struct.rsi_91x_usbdev*
  %14 = getelementptr inbounds %struct.rsi_91x_usbdev, %struct.rsi_91x_usbdev* %13, i32 0, i32 0
  %15 = load %struct.usb_device*, %struct.usb_device** %14, align 8
  store %struct.usb_device* %15, %struct.usb_device** %9, align 8
  %16 = load %struct.usb_device*, %struct.usb_device** %9, align 8
  %17 = load i64, i64* %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @rsi_usb_reg_write(%struct.usb_device* %16, i64 %17, i64 %18, i32 %19)
  ret i32 %20
}

declare dso_local i32 @rsi_usb_reg_write(%struct.usb_device*, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
